# tosdhr

./: .env.example  .gitignore  README.md  data.csv  pyproject.toml
tosdhr/: __main__.py  data_handler.py  services.py
tosdhr/dataManagement/: Test_File.py  cases.py  data_handler.py  services.py  topics.py  torch_data.py
tosdhr/modelManager/: bert.py  torch_data.py
