[tool.poetry]
name = "tosdhr"
version = "0.1.0"
description = "A model for annotating terms of services, trained on data available from tosdr"
authors = ["skewballfox <joshua.ferguson.273@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
polyglot = "^16.7.4"
six = "^1.16.0"
wheel = "^0.38.4"
PyICU = "^2.10.2"
pycld2 = "^0.41"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
