[tool.poetry]
name = "tosdhr"
version = "0.1.0"
description = "A model for annotating terms of services, trained on data available from tosdr"
authors = ["skewballfox <joshua.ferguson.273@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
wheel = "^0.38.4"
transformers = "^4.24.0"
torch = "^1.13.0"
langdetect = "^1.0.9"
python-dotenv = "^0.21.0"
beautifulsoup4 = "^4.11.1"
tokenizers = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
